some player attributes modified to final, modified  name of some methods and added objectivesWon and cornerCardsMap, moved some methods from controller to gamestate, finished controller and with all the game flow, finished structurechallenge in Player, removed gamestate from being global and created gamestate as attribute in controller, done some tests in playerTest, added invalidObjectCardException and WrongIntanceTypeException some player attributes modified to final, modified name of some methods and added objectivesWon and cornerCardsMap, moved some methods from controller to gamestate, finished controller and with all the game flow, finished structurechallenge in Player, removed gamestate from being global and created gamestate as attribute in controller, done some tests in playerTest, added invalidObjectCardException and WrongIntanceTypeException, implemented shuffleCards in board